--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="customTitleBar" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
 </resources>
