--- a/app/src/main/res/layout/activity_plant_page.xml
+++ b/app/src/main/res/layout/activity_plant_page.xml
@@ -9,22 +9,39 @@
 
     <include
         layout = '@layout/custom_title_bar'
-        android:id = '@+id/custom_title_bar'></include>
-    <ScrollView
+        android:id = '@+id/custom_title_bar'>
+    </include>
+
+
+    <HorizontalScrollView
+        android:id="@+id/plantBox"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="511dp"
+        android:background="@drawable/title_bar_background"
+        android:fillViewport="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
+            android:id="@+id/plantBoxLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"></LinearLayout>
-    </ScrollView>
+            android:layout_height="match_parent"></LinearLayout>
+    </HorizontalScrollView>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="31dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="31dp"
+        app:layout_constraintBottom_toTopOf="@+id/plantBox"
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/custom_title_bar"
+        app:srcCompat="@drawable/raised_bed" />
 
 </android.support.constraint.ConstraintLayout>
